--- a/index.html
+++ b/index.html
@@ -8,5 +8,31 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Заголовок</h1>
+<header class="header">
+        <div class="Our Menu"> 
+            <h1>Our Menu</h1>
+        </div>
+</header>
+<div class="menu_items">
+    <div class="menu_container">
+        <div class="menu_text">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et soluta consequatur dolorum hic tenetur consequuntur vero aspernatur magni earum est explicabo quasi facere, cum pariatur porro, minima alias? Quas, inventore!
+            <div class="menu_title">
+            Chicken   
+            </div>
+        </div>
+        <div class="menu_text">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel, velit! Et nemo ducimus saepe quae, consequuntur, quibusdam fugiat alias blanditiis earum eaque similique unde facilis amet ea veniam repellendus quod.
+            <div class="menu_title">
+            Beef   
+            </div>
+        </div>
+        <div class="menu_text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam optio quasi eaque quas ut voluptas eligendi dignissimos neque voluptate suscipit obcaecati impedit, aliquam quidem mollitia nam illo possimus laborum dolorem?
+            <div class="menu_title">
+            Sushi   
+            </div>
+        </div>
+    </div>
+</div>
 </body>
