Add normolize css file

--- a/index.html
+++ b/index.html
@@ -5,33 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Comatible" content="ie=adge">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="CSS/normolize.css">
 </head>
 <body>
 <header class="header">
-        <div class="Our Menu"> 
+        <div class="Our_Menu"> 
             <h1>Our Menu</h1>
         </div>
 </header>
 <div class="menu_items">
     <div class="menu_container">
-        <div class="menu_text">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Et soluta consequatur dolorum hic tenetur consequuntur vero aspernatur magni earum est explicabo quasi facere, cum pariatur porro, minima alias? Quas, inventore!
-            <div class="menu_title">
-            Chicken   
-            </div>
+        <div class="menu_title">Chicken
         </div>
-        <div class="menu_text">
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel, velit! Et nemo ducimus saepe quae, consequuntur, quibusdam fugiat alias blanditiis earum eaque similique unde facilis amet ea veniam repellendus quod.
-            <div class="menu_title">
-            Beef   
-            </div>
+        <div class="menu_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto. Dignissimos ut accusantium, ullam iusto molestiae repellat natus error.    
         </div>
-        <div class="menu_text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam optio quasi eaque quas ut voluptas eligendi dignissimos neque voluptate suscipit obcaecati impedit, aliquam quidem mollitia nam illo possimus laborum dolorem?
-            <div class="menu_title">
-            Sushi   
-            </div>
+        <div class="menu_title">Beef
+        </div>
+        <div class="menu_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto. Dignissimos ut accusantium, ullam iusto molestiae repellat natus error.    
+        </div>
+        <div class="menu_title">Sushi
+        </div>
+        <div class="menu_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto. Dignissimos ut accusantium, ullam iusto molestiae repellat natus error.    
         </div>
     </div>
 </div>
