--- a/index.html
+++ b/index.html
@@ -16,15 +16,18 @@
 </header>
 <div class="menu_items">
     <div class="menu_container">
-        <div class="menu_title">Chicken
+        <div class="menu_title">
+            <b>Chicken</b>
         </div>
         <div class="menu_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto. Dignissimos ut accusantium, ullam iusto molestiae repellat natus error.    
         </div>
-        <div class="menu_title">Beef
+        <div class="menu_title">
+            <b>Beef</b>
         </div>
         <div class="menu_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto. Dignissimos ut accusantium, ullam iusto molestiae repellat natus error.    
         </div>
-        <div class="menu_title">Sushi
+        <div class="menu_title">
+            <b>Sushi</b>
         </div>
         <div class="menu_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto. Dignissimos ut accusantium, ullam iusto molestiae repellat natus error.    
         </div>
