--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
 
 <div class="menu_items">
     <div class="menu_container">
-        <div class="menu_title">
+        <div class="menu_title" style="background-color:palevioletred;">
             <b>Chicken</b>
         </div>
         <div class="menu_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto. Dignissimos ut accusantium, ullam iusto molestiae repellat natus error.    
         </div>
-        <div class="menu_title">
-            <b>Beef</b>
+        <div class="menu_title" style="background-color:maroon;">
+            <b style="color: whitesmoke;">Beef</b>
         </div>
         <div class="menu_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto. Dignissimos ut accusantium, ullam iusto molestiae repellat natus error.    
         </div>
-        <div class="menu_title">
+        <div class="menu_title" style="background-color:moccasin;">
             <b>Sushi</b>
         </div>
         <div class="menu_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto. Dignissimos ut accusantium, ullam iusto molestiae repellat natus error.    
