Add menu_inner is html

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,30 +8,48 @@
     <link rel="stylesheet" href="CSS/style.css">
     <link rel="stylesheet" href="CSS/normolize.css">
 </head>
+
 <body>
-<header class="header">
-        <div class="Our_Menu"> 
+    <header class="header">
+        <div class="Our_Menu">
             <h1>Our Menu</h1>
         </div>
-</header>
+    </header>
 
-<div class="menu_items">
-    <div class="menu_container">
-        <div class="menu_title" style="background-color:palevioletred;">
-            <b>Chicken</b>
-        </div>
-        <div class="menu_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto. Dignissimos ut accusantium, ullam iusto molestiae repellat natus error.    
-        </div>
-        <div class="menu_title" style="background-color:maroon;">
-            <b style="color: whitesmoke;">Beef</b>
-        </div>
-        <div class="menu_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto. Dignissimos ut accusantium, ullam iusto molestiae repellat natus error.    
-        </div>
-        <div class="menu_title" style="background-color:moccasin;">
-            <b>Sushi</b>
-        </div>
-        <div class="menu_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto. Dignissimos ut accusantium, ullam iusto molestiae repellat natus error.    
+    <div class="menu_items">
+        <div class="menu_container">
+        
+
+            <div class="menu_inner">
+                <div class="menu_title" style="background-color:palevioletred;">
+                    <b>Chicken</b>
+                </div>
+                <div class="menu_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
+                    quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto. Dignissimos
+                    ut accusantium, ullam iusto molestiae repellat natus error.
+                </div>
+            </div>
+
+            <div class="menu_inner">
+                <div class="menu_title" style="background-color:maroon;">
+                    <b style="color: whitesmoke;">Beef</b>
+                </div>
+                <div class="menu_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
+                    quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto. Dignissimos
+                    ut accusantium, ullam iusto molestiae repellat natus error.
+                </div>
+            </div>
+
+            <div class="menu_inner">
+                <div class="menu_title" style="background-color:moccasin;">
+                    <b>Sushi</b>
+                </div>
+                <div class="menu_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
+                    quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto. Dignissimos
+                    ut accusantium, ullam iusto molestiae repellat natus error.
+                </div>
+            </div>
+
         </div>
     </div>
-</div>
 </body>
