correct on desktop

--- a/index.html
+++ b/index.html
@@ -18,38 +18,47 @@
 
     <div class="menu_items">
         <div class="menu_container">
-        
+            <div class="menu_inners">
 
-            <div class="menu_inner">
-                <div class="menu_title" style="background-color:palevioletred;">
-                    <b>Chicken</b>
+                <div class="menu_inner">
+
+                    <div class="menu_title" style="background-color:palevioletred;">
+                        <b>Chicken</b>
+                    </div>
+                    <div class="menu_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
+                        quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto.
+                        Dignissimos ut accusantium, ullam iusto molestiae repellat natus error.
+                    </div>
+
                 </div>
-                <div class="menu_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
-                    quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto. Dignissimos
-                    ut accusantium, ullam iusto molestiae repellat natus error.
+
+                <div class="menu_inner">
+
+                    <div class="menu_title" style="background-color:maroon;">
+                        <b style="color: whitesmoke;">Beef</b>
+                    </div>
+                    <div class="menu_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
+                        quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto.
+                        Dignissimos ut accusantium, ullam iusto molestiae repellat natus error.
+                    </div>
+
                 </div>
+
+                <div class="menu_inner">
+
+                    <div class="menu_title" style="background-color:moccasin;">
+                        <b>Sushi</b>
+                    </div>
+                    <div class="menu_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
+                        quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto.
+                        Dignissimos ut accusantium, ullam iusto molestiae repellat natus error.
+                    </div>
+
+                </div>
+                
             </div>
-
-            <div class="menu_inner">
-                <div class="menu_title" style="background-color:maroon;">
-                    <b style="color: whitesmoke;">Beef</b>
-                </div>
-                <div class="menu_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
-                    quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto. Dignissimos
-                    ut accusantium, ullam iusto molestiae repellat natus error.
-                </div>
-            </div>
-
-            <div class="menu_inner">
-                <div class="menu_title" style="background-color:moccasin;">
-                    <b>Sushi</b>
-                </div>
-                <div class="menu_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
-                    quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto. Dignissimos
-                    ut accusantium, ullam iusto molestiae repellat natus error.
-                </div>
-            </div>
-
         </div>
     </div>
+
+
 </body>
