--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
                 <div class="menu_inner">
                     <div class="menu_title" style="background-color:maroon;">
-                        <b style="color: whitesmoke;">Beef</b>
+                        <b style="color: whitesmoke"> Beef</b>
                     </div>
                     <div class="menu_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
                         quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto.
