--- a/index.html
+++ b/index.html
@@ -20,31 +20,27 @@
         <div class="menu_container">
             <div class="menu_inners">
 
-                <div class="menu_inner">
-                    <div class="menu_title" style="background-color:palevioletred;">
-                        <b>Chicken</b>
-                    </div>
-                    <div class="menu_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
+                <div class="row">
+                    <div class="col-3" style="background-color:palevioletred;">
+                        <h2>Chicken</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
                         quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto.
                         Dignissimos ut accusantium, ullam iusto molestiae repellat natus error.
+                        </p>
                     </div>
-                </div>
+                
 
-                <div class="menu_inner">
-                    <div class="menu_title" style="background-color:maroon;">
-                        <b style="color: whitesmoke"> Beef</b>
-                    </div>
-                    <div class="menu_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
+                    <div class="col-3" style="background-color:maroon;">
+                        <h2 style="color: whitesmoke"> Beef</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
                         quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto.
                         Dignissimos ut accusantium, ullam iusto molestiae repellat natus error.
+                        </p>
                     </div>
-                </div>
 
-                <div class="menu_inner">
-                    <div class="menu_title" style="background-color:moccasin;">
-                        <b>Sushi</b>
-                    </div>
-                    <div class="menu_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
+                   <div class="col-3" style="background-color:moccasin;">
+                        <h2>Sushi</h2>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
                         quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto.
                         Dignissimos ut accusantium, ullam iusto molestiae repellat natus error.
                     </div>
