--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="CSS/style.css">
-    <link rel="stylesheet" href="CSS/normolize.css">
+    
 </head>
 
 <body>
@@ -18,35 +18,39 @@
 
     <div class="menu_items">
         <div class="menu_container">
-            <div class="menu_inners">
 
-                <div class="row">
-                    <div class="col-3" style="background-color:palevioletred;">
+            <div class="row">
+                <div class="col-3">
+                    <div class="col-9" style="background-color:palevioletred;">
                         <h2>Chicken</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
                         quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto.
                         Dignissimos ut accusantium, ullam iusto molestiae repellat natus error.
-                        </p>
-                    </div>
-                
-
-                    <div class="col-3" style="background-color:maroon;">
-                        <h2 style="color: whitesmoke"> Beef</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
-                        quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto.
-                        Dignissimos ut accusantium, ullam iusto molestiae repellat natus error.
-                        </p>
-                    </div>
-
-                   <div class="col-3" style="background-color:moccasin;">
-                        <h2>Sushi</h2>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
-                        quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto.
-                        Dignissimos ut accusantium, ullam iusto molestiae repellat natus error.
-                    </div>
+                    </p>
                 </div>
 
+                <div class="col-3">
+                    <div class="col-9" style="background-color:darkred;">
+                        <h2 style="color: whitesmoke"> Beef</h2>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
+                        quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto.
+                        Dignissimos ut accusantium, ullam iusto molestiae repellat natus error.
+                    </p>
+                </div>
+
+                <div class="col-3">
+                    <div class="col-9" style="background-color:moccasin;">
+                        <h2>Sushi</h2>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
+                        quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto.
+                        Dignissimos ut accusantium, ullam iusto molestiae repellat natus error.
+                    </p>
+                </div>
             </div>
+
         </div>
     </div>
 
