--- a/index.html
+++ b/index.html
@@ -4,24 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Document</title>
     <link rel="stylesheet" href="CSS/style.css">
-    
+
 </head>
 
 <body>
     <header class="header">
-        <div class="Our_Menu">
-            <h1>Our Menu</h1>
-        </div>
+        <h1>Our Menu</h1>
     </header>
 
     <div class="menu_items">
         <div class="menu_container">
 
             <div class="row">
-                <div class="col-3">
-                    <div class="col-9" style="background-color:palevioletred;">
+                <div class="col-lg-3 col-md-3">
+                    <div class="col-lg-9 col-mg-10" style="background-color:palevioletred;">
                         <h2>Chicken</h2>
                     </div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
@@ -30,9 +29,9 @@
                     </p>
                 </div>
 
-                <div class="col-3">
-                    <div class="col-9" style="background-color:darkred;">
-                        <h2 style="color: whitesmoke"> Beef</h2>
+                <div class="col-lg-3 col-md-3">
+                    <div class="col-lg-9 col-mg-10" style="background-color:darkred;">
+                        <h2 style="color: whitesmoke">Beef</h2>
                     </div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
                         quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto.
@@ -40,8 +39,8 @@
                     </p>
                 </div>
 
-                <div class="col-3">
-                    <div class="col-9" style="background-color:moccasin;">
+                <div class="col-lg-3 col-md-3">
+                    <div class="col-lg-9 col-mg-10" style="background-color:moccasin;">
                         <h2>Sushi</h2>
                     </div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
