--- a/index.html
+++ b/index.html
@@ -16,43 +16,35 @@
         </div>
     </header>
 
-    <div class="menu_items">
-        <div class="menu_container">
-            <div class="menu_inners">
 
-                <div class="menu_inner">
-                    <div class="menu_title" style="background-color:palevioletred;">
-                        <b>Chicken</b>
-                    </div>
-                    <div class="menu_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
-                        quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto.
-                        Dignissimos ut accusantium, ullam iusto molestiae repellat natus error.
-                    </div>
-                </div>
+    <div class="menu_inners">
 
-                <div class="menu_inner">
-                    <div class="menu_title" style="background-color:maroon;">
-                        <b style="color: whitesmoke"> Beef</b>
-                    </div>
-                    <div class="menu_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
-                        quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto.
-                        Dignissimos ut accusantium, ullam iusto molestiae repellat natus error.
-                    </div>
-                </div>
-
-                <div class="menu_inner">
-                    <div class="menu_title" style="background-color:moccasin;">
-                        <b>Sushi</b>
-                    </div>
-                    <div class="menu_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
-                        quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto.
-                        Dignissimos ut accusantium, ullam iusto molestiae repellat natus error.
-                    </div>
-                </div>
-
+        <div class="row" style="background-color:palevioletred;">
+            <div class="col-lg-3 col-md-6"><p>Chicken</p>
+            </div>
+            <div class="col-lg-3 col-md-6"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
+                quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto.
+                Dignissimos ut accusantium, ullam iusto molestiae repellat natus error.</p>
             </div>
         </div>
-    </div>
 
+        <div class="row" style="background-color:maroon;">
+            <div class="col-lg-3 col-md-6"><p style="color: whitesmoke">Beef</p>
+            </div>
+            <div class="col-lg-3 col-md-6"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
+                quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto.
+                Dignissimos ut accusantium, ullam iusto molestiae repellat natus error.</p>
+            </div>
+        </div>
+
+        <div class="row" style="background-color:moccasin;">
+            <div class="col-lg-3 col-md-6"><p>Sushi</p>
+            </div>
+            <div class="col-lg-3 col-md-6"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
+                quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto.
+                Dignissimos ut accusantium, ullam iusto molestiae repellat natus error.</p>
+            </div>
+        </div>> 
+    </div>
 
 </body>
