--- a/index.html
+++ b/index.html
@@ -17,34 +17,35 @@
     </header>
 
 
-    <div class="menu_inners">
+    <div class="row">
 
-        <div class="row" style="background-color:palevioletred;">
-            <div class="col-lg-3 col-md-6"><p>Chicken</p>
-            </div>
-            <div class="col-lg-3 col-md-6"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
+        <div class="col-lg-4 col-md-12" style="background-color:palevioletred;">
+            <p>Chicken</p>
+        </div>
+        <div class="col-lg-4 col-md-12">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
                 quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto.
                 Dignissimos ut accusantium, ullam iusto molestiae repellat natus error.</p>
-            </div>
         </div>
 
-        <div class="row" style="background-color:maroon;">
-            <div class="col-lg-3 col-md-6"><p style="color: whitesmoke">Beef</p>
-            </div>
-            <div class="col-lg-3 col-md-6"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
+        <div class="col-lg-4 col-md-12" style="background-color:maroon;">
+            <p style="color: whitesmoke">Beef</p>
+        </div>
+        <div class="col-lg-4 col-md-12">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
                 quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto.
                 Dignissimos ut accusantium, ullam iusto molestiae repellat natus error.</p>
-            </div>
         </div>
 
-        <div class="row" style="background-color:moccasin;">
-            <div class="col-lg-3 col-md-6"><p>Sushi</p>
-            </div>
-            <div class="col-lg-3 col-md-6"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
+        <div class="col-lg-4 col-md-12" style="background-color:moccasin;">
+            <p>Sushi</p>
+        </div>
+        <div class="col-lg-4 col-md-12">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
                 quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto.
                 Dignissimos ut accusantium, ullam iusto molestiae repellat natus error.</p>
-            </div>
-        </div>> 
+        </div>
     </div>
 
 </body>
+</html>
