--- a/index.html
+++ b/index.html
@@ -16,36 +16,44 @@
         </div>
     </header>
 
+    <div class="container">
+        <div class="row">
 
-    <div class="row">
+            <div class="col-lg-4 col-md-16">
+                <div class="title" style="background-color:palevioletred;">
+                    <p>Chicken</p>
+                </div>
+                <div class="paragraph">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
+                        quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto.
+                        Dignissimos ut accusantium, ullam iusto molestiae repellat natus error.</p>
+                </div>
+            </div>
 
-        <div class="col-lg-6 col-md-16" style="background-color:palevioletred;">
-            <p>Chicken</p>
-        </div>
-        <div class="col-lg-6 col-md-6">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
-                quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto.
-                Dignissimos ut accusantium, ullam iusto molestiae repellat natus error.</p>
-        </div>
+            <div class="col-lg-4 col-md-6">
+                <div class="title" style="background-color:maroon;">
+                    <p style="color: whitesmoke">Beef</p>
+                </div>
+                <div class="paragraph">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
+                        quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto.
+                        Dignissimos ut accusantium, ullam iusto molestiae repellat natus error.</p>
+                </div>
+            </div>
 
-        <div class="col-lg-6 col-md-6" style="background-color:maroon;">
-            <p style="color: whitesmoke">Beef</p>
-        </div>
-        <div class="col-lg-6 col-md-6">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
-                quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto.
-                Dignissimos ut accusantium, ullam iusto molestiae repellat natus error.</p>
-        </div>
-
-        <div class="col-lg-6 col-md-6" style="background-color:moccasin;">
-            <p>Sushi</p>
-        </div>
-        <div class="col-lg-6 col-md-6">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
-                quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto.
-                Dignissimos ut accusantium, ullam iusto molestiae repellat natus error.</p>
+            <div class="col-lg-4 col-md-6">
+                <div class="title" style="background-color:moccasin;">
+                    <p>Sushi</p>
+                </div>
+                <div class="paragraph">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor accusamus quia
+                        quas laudantium atque, molestias consectetur eos facilis repudiandae, distinctio iusto.
+                        Dignissimos ut accusantium, ullam iusto molestiae repellat natus error.</p>
+                </div>
+            </div>
+            
         </div>
     </div>
-
 </body>
+
 </html>
